* Note: Name should always be the actual Unit name, DisplayName field should be added if you wish this to be something different.

Ready Check
* New: Feast of Domination AP (Warrior, Rogue, High, 60)
* New: Stellar Powersurge Vial (Warrior, Rogue, High, 60)
* New: Luminescent Powerstone (Cleric, Mage, High, 60)
* New: Stellar Brightsurge Vial (Cleric, Mage, High, 60)

Storm Legion

Triumph of the Dragon Queen
* Grand Falconer Zoles
** New: Added Alert and Stop trigger for Static Empowerment interrupt.
** New: Added Timers for First and following Void Spawn phases.
** New: Added Tank-Swap monitoring for Bleeding Strikes. (Possibly the healing debuff)
* Jultharin
** New: Added Timer, Alert and Stop trigger for Deranging Tempest interrupt.

Exodus of the Storm Queen
* Dominax (Expert/Normal)
** New: Timer and Alert for Decimate (including stop trigger)
** New: Alert for Red Mist cast and channel.
** New: Added a 25 second timeout in order to catch encounter endings.
** New: Added a catch for the message announced when completing the encounter as a victory state.
** Fixed: Both versions of Dominax should now have a castbar again (if enabled).
* Valthundr (Expert/Normal)
** New: Alert added for Frost Bound (Move in mechanic).
** New: Alert added for Winter's Fury (Hide mechanic).

Empyrean Core (Expert/Normal)
* Kaliban's Bodyguards
** New: Added Alert for Siphoning Vortex.
** New: Added Stop trigger for Siphoning Vortex successful interrupts.

Storm Breaker Protocol (Expert/Normal)
* Vellion the Pestilent
** New: Added Vellion's Exposed Viscera as a unit for death tracking, and victory state.

Translations
* German Updates.

----
v1.3.6

Raid Marks
* New: Small Icons added. (see KBM.Marks.File[<number>])
* New: Large Icons added. (see KBM.Marks.FileFull[<number>])
* New: Names added. (see KBM.Marks.Name[<number>])
* New: Translation dictionary for Names.

Unit Tracking